# wf-lab

./: .gitignore  .~lock.paper.odt#  Cargo.toml  README.md  build.rs  build_.rs  compile_cuda.ps1  interp_test.py  lcuda  nudge_lab.py  paper.odt  psi_test.py  results.md  schrodinger_solver.py
.cargo/: config.toml
archive/: basis_init.rs  basis_weight_finder.rs  fragments.rs  misc_code.rs  nudge.rs  potential_cpu.rs  rbf.rs
cuda/: README.md  cuda.cpp  cuda.cu
notes/: psi notes.txt
scripts/: coulomb_microcharge.py  nudge_lab.py  sto_test.py
scripts/coulomb_microcharge/: Cargo.toml
scripts/coulomb_microcharge/src/: main.rs
src/: angular_p.rs  basis_finder.rs  basis_fn_finder.rs  basis_init.rs  basis_weight_finder.rs  basis_wfs.rs  complex_nums.rs  cuda.cu  dirac.rs  eigen_fns.rs  eigen_raw.rs  elec_elec.rs  eval.rs  experiminting.rs  field_visuals.rs  forces.rs  gauss_padding.rs  gpu.rs  grid_setup.rs  interp.rs  lib.rs  lib_.rs  main.rs  misc_code.rs  nudge.rs  num_diff.rs  potential.rs  presets.rs  rbf.rs  render.rs  shader_compute.wgsl  state.rs  types.rs  ui.rs  util.cu  util.rs  wf_ops.rs
src/basis_wfs/: gto.rs  h.rs  mod.rs  sto.rs
src/core_calcs/: eigen_fns.rs  eigen_raw.rs  elec_elec.rs  mod.rs  potential.rs
src/cuda/: cuda.cu  util.cu  util.cuh
src/on_standby/: misc_code.rs
src/rbf/: bbox.rs  mod.rs  rbf.rs  test.rs  utils.rs
src/ui/: mod.rs  procedures.rs
