[package]
name = "wf_lab"
version = "0.1.0"
edition = "2021"


[dependencies]
graphics = { path = "../graphics_wgpu" }
lin-alg2 = { path = "../lin_alg" }
egui = "^0.19"

# We use Scilib for computing H basis fns, eg with Laguerre and Legendre polynomials.
scilib = "^1.0.0"

# Attempting to solve linear systems of equations for basis finding
ndarray = "^0.15.6"
ndarray-linalg = { version = "^0.16.0", features = ["intel-mkl-static"] }

nalgebra = "^0.32.3"
cudarc = { version = "^0.10.0", optional=true }

# todo: Eventually ditch this tool for permutations:
itertools = "^0.12.0"


# We feature-gate the CUDA dependency, so this program can be run on computers that don't have a suitable graphics chip.
[features]
default = ["cuda"]
cuda = ["cudarc"]

