[package]
name = "wf_lab"
version = "0.1.0"
edition = "2021"


[dependencies]
graphics = { path = "../graphics_wgpu" }
lin-alg = { package = "lin-alg2", path = "../lin_alg" }
egui = "^0.29.1"

# We use Scilib for computing H basis fns, eg with Laguerre and Legendre polynomials.
scilib = "^1.0.0"

# Attempting to solve linear systems of equations for basis finding
ndarray = "^0.16.1"
ndarray-linalg = { version = "^0.16.0", features = ["intel-mkl-static"] }

nalgebra = "^0.33.0"

# Keep this cuda version in sync with what you have installed on the system.
cudarc = { version = "^0.12.1", optional=true, features=["cuda-12060"] }

# todo: Eventually ditch this tool for permutations:
itertools = "^0.13.0"
rand = "^0.8.5"


# We feature-gate the CUDA dependency, so this program can be run on computers that don't have a suitable graphics chip.
[features]
default = ["cuda"]
cuda = ["cudarc"]

