[package]
name = "wf_lab"
version = "0.1.0"
edition = "2021"


[dependencies]
graphics = { path = "../graphics" }
#lin_alg = "^1.0.1"
lin_alg = {path = "../lin_alg"}
egui = "^0.30.0"

# We use Scilib for computing H basis fns, eg with Laguerre and Legendre polynomials.
scilib = "^1.0.0"

# Attempting to solve linear systems of equations for basis finding
ndarray = "^0.16.1"
ndarray-linalg = { version = "^0.16.0", features = ["intel-mkl-static"] }

nalgebra = "^0.33.0"

# todo: Eventually ditch this tool for permutations:
itertools = "^0.14.0"
rand = "^0.8.5"

# todo: Integrate Rayon into your code.
rayon = "^1.10.0"  # Parallel execution on CPU using thread pools.

# Keep this cuda version in sync with what you have installed on the system.
cudarc = { version = "^0.13.3", optional = true, features=["cuda-12060"] }


[build-dependencies]
cuda_setup = { version = "0.1.0", optional = true }


# We feature-gate the CUDA dependency, so this program can be run on computers that don't have a
# suitable graphics chip.
[features]
default = ["cuda"]
cuda = ["cudarc", "cuda_setup"]

